2001-06-29  Joshua Sled  <jsled@asynchronous.org>

	* src/gnome/gnc-frequency.c: Added functions for dealing with
	widget changes in the year-subset freq. panels [quarterly,
	tri-yearly, semi-yearly, yearly].

	* src/gnome/gnc-frequency.c (gnc_frequency_save_state): Some
	improvment regarding saving the state of scheduled transactions.
	(gnc_frequency_setup): Much improvement regarding the setup of
	scheduled transactions.
	(year_range_sels_changed): Added to simplify modifications to
	year-range scheduled transactions.

2001-06-29  Dave Peticolas  <dave@krondo.com>

	* src/engine/gnc-account-xml-v2.c: Alex Zepeda's patch
	adding a missing include.

2001-06-27  Dave Peticolas  <dave@krondo.com>

	* src/register/QuickFill.c: same as below

	* src/register/quickfillcell.c: use wide character conversion
	functions

	* AUTHORS: credits

	* doc/sgml/C/xacc-about.sgml: credits

	* po/fr.po: Paul Poulain's french translations

2001-06-26  Dave Peticolas  <dave@krondo.com>

	* src/engine/sixtp-dom-parsers.c: same as below

	* src/engine/gnc-commodity-xml-v2.c: same as below

	* src/engine/gnc-account-xml-v2.c: don't use node content member
	directly -- if libxml was configured to use buffers, this won't
	work.

	* src/register/gnome/gnucash-sheet.c
	(gnucash_sheet_key_press_event): allow shift-pgup and shift-pgdn
	to go to top & bottom of register respectively.

	* src/register/gnome/datecell-gnome.c (DateDirect): allow '-'
	hotkey to work if there is a full date there, or the cell is
	blank.

	* src/gnome/gnc-html.c: don't handle keypresses, let the gtkhtml
	object do it.

2001-06-25  Dave Peticolas  <dave@krondo.com>

	* src/engine/sql/kvp-sql.c: include gnc-engine-util.h for stpcpy

	* src/engine/gnc-engine-util.c (gnc_stpcpy): add func

	* src/engine/gnc-engine-util.h: add definition of gnc_stpcpy.
	if stpcpy is not available, define stpcpy as gnc_stpcpy.

	* src/gnc-ui-util.c: remove gnc_stpcpy

	* src/gnome/window-main-summarybar.c: fix bug in euro profit